Wrap social nav styles. Fixes button html. Adjust styles.

--- a/src/styles/layouts/footer.css
+++ b/src/styles/layouts/footer.css
@@ -66,6 +66,10 @@
   margin-right: -1.5rem;
 }
 
+.footer__navigation__column:not(:last-child) {
+  border-bottom: 0 none;
+}
+
 .footer__navigation__column-content,
 .footer__navigation__column summary {
   padding-left: 1.5rem;
@@ -86,7 +90,7 @@
 
 .footer-navigation__header {
   margin-bottom: 0.75rem;
-  margin-top: 0.75rem;
+  margin-top: 2rem;
 }
 
 .footer-navigation__header--desktop {
@@ -132,7 +136,46 @@
 }
 
 .social-navigation svg {
-  fill: var(--color-secondary-light);
+  fill: currentcolor;
+}
+
+.footer .btn {
+  display: block;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.footer__marquee-outer {
+  overflow: hidden;
+  width: 100%;
+}
+
+.footer__marquee {
+  display: flex;
+}
+
+.footer__marquee-slide {
+  white-space: nowrap;
+
+  animation: marquee 120s linear infinite;
+}
+
+.footer__marquee-slide > * {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 2.5vw;
+  margin-right: 2.5vw;
+}
+
+.footer__marquee-slide svg {
+  height: 28px;
+  width: 28px;
+}
+
+.footer__actions {
+  margin-top: 2rem;
 }
 
 @media (min-width: 640px) {
@@ -171,7 +214,6 @@
 @media (min-width: 1024px) {
   .footer__navigation .container {
     grid-template-columns: repeat(5, minmax(0, 1fr));
-    max-width: 83.33333333%;
   }
 
   .footer__navigation__column > summary {
@@ -179,29 +221,8 @@
   }
 }
 
-.footer__marquee-outer {
-  overflow: hidden;
-  width: 100%;
-}
-
-.footer__marquee {
-  display: flex;
-}
-
-.footer__marquee-slide {
-  white-space: nowrap;
-  
-  animation: marquee 120s linear infinite;
-}
-
-.footer__marquee-slide > * {
-  display: inline-block;
-  vertical-align: middle;
-  margin-left: 2.5vw;
-  margin-right: 2.5vw;
-}
-
-.footer__marquee-slide svg {
-  height: 28px;
-  width: 28px;
+@media (min-width: 1280px) {
+  .footer__navigation .container {
+    max-width: 83.33333333%;
+  }
 }
